--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,27 +21,28 @@ services:
       retries: 10
       start_period: 30s
     
+    
 
   app:
     build: .
     depends_on:
       mysql:
         condition: service_healthy
-    ports:
-      - 8080:8080
+    # ports:
+    #   - :8080
 
       
 
-  # mynginx:
-  #   image: nginx
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #     - ./static:/usr/share/nginx/html
-  #     - ./templates/index.html:/usr/share/nginx/html/index.html
-  #   depends_on:
-  #     - app
+  mynginx:
+    image: nginx:1.23.3
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      # - ./static:/usr/share/nginx/html
+      # - ./templates/index.html:/usr/share/nginx/html/index.html
+    depends_on:
+      - app
     
 
     
