--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    # ports:
-    #   - :8080
+    ports:
+      - 8080:8080
 
       
 
@@ -39,7 +39,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      # - ./static:/usr/share/nginx/html
+      - ./src/main/webapp/setup:/usr/share/nginx/html
       # - ./templates/index.html:/usr/share/nginx/html/index.html
     depends_on:
       - app
