--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,9 @@ http {
     listen 80 default_server;
   
     location / {
+      #root /usr/share/nginx/html;
+      #index /usr/share/nginx/html/index.html;
+
       proxy_pass         http://app:8080/; 
       proxy_redirect     off;
 
@@ -13,15 +16,6 @@ http {
       proxy_set_header   X-Real-IP        $remote_addr;
       proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-    }
-
-    location /api {
-      proxy_pass         http://app:8080/; 
-      proxy_redirect     off;
-
-      proxy_set_header   Host             $host;
-      proxy_set_header   X-Real-IP        $remote_addr;
-      proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
     }
   }
 }
