--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ./dbdata/:/docker-entrypoint-initdb.d
-      - ./data:/var/lib/mysql
+      - ./dbdata/setup:/docker-entrypoint-initdb.d
+      - ./dbdata/data:/var/lib/mysql
     environment:
       - datasource.dialect=MYSQL
       - datasource.url= jdbc:mysql://mysql:3306/lavagna
@@ -15,6 +15,8 @@ services:
       - datasource.password=password
       - spring.profile.active= dev
       - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=lavagna
+      
     healthcheck:
       test: ["CMD", "mysqladmin","ping","-h","localhost"]
       timeout: 20s
