proudly fixed bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,12 @@ services:
       - ./dbdata/setup:/docker-entrypoint-initdb.d
       - ./dbdata/data:/var/lib/mysql
     environment:
-      - datasource.dialect=MYSQL
-      - datasource.url= jdbc:mysql://mysql:3306/lavagna
-      - datasource.username=user
-      - datasource.password=password
-      - spring.profile.active= dev
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=lavagna
+      - MYSQL_CHARACTER_SET=utf8
+      - MYSQL_COLLATION=utf8_bin
+
+      
       
     healthcheck:
       test: ["CMD", "mysqladmin","ping","-h","localhost"]
@@ -30,6 +29,12 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+    environment:
+      - DB_DIALECT=MYSQL
+      - DB_URL=jdbc:mysql://mysql:3306/lavagna?useSSL=false
+      - DB_USER=root
+      - DB_PASS=password
+      - SPRING_PROFILE=dev
 
       
 
